# pbdoom

./: .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  README.md  Rakefile  build.sh  downloads.html  events.c  events.h  index.html  installation.html  main.c  main.cpp  mon.sh  pbdoom-get.app  pbdoom.app  pbdoom_state.c  pbdoom_state.h  posts.html  sdk_path  send.sh  tailwind.config.js  version.h.in
.github/workflows/: build.yml  pages.yml
2023/01/23/: release-v-0-0-1.html  release-v-0-0-2.html
2023/01/23/release-v-0-0-1/: index.html
2023/01/23/release-v-0-0-2/: index.html
2023/02/13/: release-v-0-0-3.html
2023/02/13/release-v-0-0-3/: index.html
2023/02/23/release-v-0-0-4/: index.html
2023/06/02/release-v0-0-5/: index.html
assets/css/: main.css
downloads/: index.html
installation/: index.html
pages/: .gitignore  404.html  CNAME  Gemfile  README.md  Rakefile  _config.yml  downloads.html  index.html  installation.md  package.json  postcss.config.js  posts.html
pages/_data/: i18n.yml  index_carousel.yml
pages/_includes/: button.html  installation_text.md  installation_text_ru.md  installation_text_tt.md  post_card.html  release_button.html
pages/_layouts/: default.html  downloads.html  home.html  html.html  post.html  posts.html  release_post.html  with_title.html
pages/_plugins/: t.rb  turl.rb
pages/_posts/: 2023-01-23-release-v-0-0-1.md  2023-01-23-release-v-0-0-2.md  2023-02-13-release-v-0-0-3.md  2023-02-23-release-v-0-0-4.md  2023-06-02-release-v0-0-5.md
pages/ru/: index.html  загрузки.html  новости.html  установка.md
pages/ru/_posts/: 2023-01-23-обновление-v-0-0-1.md  2023-01-23-обновление-v-0-0-2.md  2023-02-13-обновление-v-0-0-3.md  2023-02-23-обновление-v-0-0-4.md  2023-06-02-обновление-v0-0-5.md
pages/tt/: index.html  йөкләүләр.html  урнаштыру.md  яңалыклар.html
pages/tt/_posts/: 2023-01-23-яңарту-v-0-0-1.md  2023-01-23-яңарту-v-0-0-2.md  2023-02-13-яңарту-v-0-0-3.md  2023-02-23-яңарту-v-0-0-4.md  2023-06-02-яңарту-v0-0-5.md
pbdoom/: gui.c  gui.h  render.c  render.h
pbdoom/frames/: color_settings.c  color_settings.h  frame.h  game.c  game.h  keyboard.c  keyboard.h  panel.c  panel.h
posts/: index.html
ru/: index.html
ru/2023/01/23/обновление-v-0-0-1/: index.html
ru/2023/01/23/обновление-v-0-0-2/: index.html
ru/2023/02/13/обновление-v-0-0-3/: index.html
ru/2023/02/23/обновление-v-0-0-4/: index.html
ru/2023/06/02/обновление-v0-0-5/: index.html
ru/posts/: index.html
ru/загрузки/: index.html
ru/новости/: index.html
ru/установка/: index.html
sdldoom-1.10/: d_main.c  d_main.h  doomtype.h  g_game.c  i_main.c  i_main.h  i_sound.c  i_system.c  i_system.h  i_video.c  m_menu.h  r_data.c  s_sound.c
tt/: index.html
tt/2023/01/23/яңарту-v-0-0-1/: index.html
tt/2023/01/23/яңарту-v-0-0-2/: index.html
tt/2023/02/13/яңарту-v-0-0-3/: index.html
tt/2023/02/23/яңарту-v-0-0-4/: index.html
tt/2023/06/02/яңарту-v0-0-5/: index.html
tt/йөкләүләр/: index.html
tt/урнаштыру/: index.html
tt/яңалыклар/: index.html
